Updated Meta tags

--- a/public/agents.html
+++ b/public/agents.html
@@ -14,6 +14,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+  <!-- Twitter tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@ethanjmarchand" />
+  <meta name="twitter:title" content="K2 Realty" />
+  <meta name="twitter:description" content="Free Evaluations. Free Advice." />
+  <meta name="twitter:image" content="images/k2blackonwhite.jpg" />
+  <!-- og tags -->
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="K2 Realty" />
+  <meta property="og:description" content="Free Evaluations. Free Advice." />
+  <meta property="og:url" content="https://k2r.ca/" />
+  <meta property="og:image" content="images/k2blackonwhite.jpg" />
+  <!-- css -->
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="output.css">
   <title>K2 Realty Corporation</title>
@@ -51,7 +64,7 @@
         </div>
         <div class="grid lg:grid-cols-3 lg:gap-5 mt-16 pb-12 border-b-2">
           <div class="p-6">
-            <img class="rounded-full h-56 w-56 object-cover mx-auto" src="images/ethan.jpg" alt="Ethan Headshot">
+            <img class="rounded-full h-56 w-56 object-cover mx-auto" src="images/ethan_square.jpg" alt="Ethan Headshot">
             <div class="">
               <h3 class="pt-4 text-center text-2xl font-bold">Ethan Marchand</h3>
               <h4 class="m-4 text-xl"><i class="pr-6 text-lg fas fa-user"></i>Broker/Owner</h4>
