--- a/public/selling.html
+++ b/public/selling.html
@@ -14,6 +14,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+  <!-- Twitter tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@ethanjmarchand" />
+  <meta name="twitter:title" content="K2 Realty" />
+  <meta name="twitter:description" content="Free Evaluations. Free Advice." />
+  <meta name="twitter:image" content="images/k2blackonwhite.jpg" />
+  <!-- og tags -->
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="K2 Realty" />
+  <meta property="og:description" content="Free Evaluations. Free Advice." />
+  <meta property="og:url" content="https://k2r.ca/" />
+  <meta property="og:image" content="images/k2blackonwhite.jpg" />
+  <!-- css -->
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="output.css">
   <title>K2 Realty Corporation</title>
