--- a/public/contact.html
+++ b/public/contact.html
@@ -19,13 +19,13 @@
   <meta name="twitter:site" content="@ethanjmarchand" />
   <meta name="twitter:title" content="K2 Realty" />
   <meta name="twitter:description" content="Free Evaluations. Free Advice." />
-  <meta name="twitter:image" content="images/k2blackonwhite.jpg" />
+  <meta name="twitter:image" content="images/k2whiteonred2.png" />
   <!-- og tags -->
   <meta property="og:type" content="article" />
   <meta property="og:title" content="K2 Realty" />
   <meta property="og:description" content="Free Evaluations. Free Advice." />
   <meta property="og:url" content="https://k2r.ca/" />
-  <meta property="og:image" content="images/k2blackonwhite.jpg" />
+  <meta property="og:image" content="images/k2whiteonred2.png" />
   <!-- css -->
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="output.css">
