--- a/public/commercial.html
+++ b/public/commercial.html
@@ -33,26 +33,27 @@
   <script src="https://kit.fontawesome.com/2d2042756f.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <i id="menubtn" class="cursor-pointer fa-solid fa-bars fixed top-5 right-5 text-3xl lg:invisible text-zinc-400"></i>
-  <nav id="navbar" class="-ml-52 lg:ml-0 overflow-y-auto fixed h-full bg-[#012145] w-52 transition-all overflow-hidden shadow-[5px_0px_20px_0px_rgba(0,0,0,0.5)]">
-    <a href="/"><img class="w-32 m-auto my-8" src="images/k2logo.png" alt="K2 Realty logo"></a>
+  <i id="menubtn" class="cursor-pointer fa-solid fa-bars fixed top-5 right-5 text-3xl lg:invisible text-black"></i>
+  <nav id="navbar" class="-ml-52 lg:ml-0 overflow-y-auto fixed h-full bg-[#c10c0aff] w-52 transition-all overflow-hidden shadow-[5px_0px_20px_0px_rgba(0,0,0,0.5)]">
+    <a href="/"><img class="w-32 m-auto my-8" src="images/k2whiteontransparent.png" alt="K2 Realty logo"></a>
     <div class="flex flex-col p-6">
-      <a class="hover:text-zinc-100 mb-2 text-xl text-zinc-400 pl-3 rounded" href="/">Home</a>
-      <a class="hover:text-zinc-100 mb-2 text-xl text-zinc-400 pl-3 rounded" href="/buying.html">Buying</a>
-      <a class="hover:text-zinc-100 mb-2 text-xl text-zinc-400 pl-3 rounded" href="/selling.html">Selling</a>
-      <a class="mb-2 text-xl text-white bg-zinc-700 pl-3 rounded" href="#">Commercial</a>
-      <a class="hover:text-zinc-100 mb-2 text-xl text-zinc-400 pl-3 rounded" href="/agents.html">Agents</a>
-      <a class="hover:text-zinc-100 mb-2 text-xl text-zinc-400 pl-3 rounded" href="/contact.html">Contact</a>
+      <a class="hover:bg-red-500 hover:shadow-lg mb-2 text-xl text-zinc-100 pl-3 rounded" href="#">Home</a>
+      <a class="hover:bg-red-500 hover:shadow-lg mb-2 text-xl text-zinc-100 pl-3 rounded" href="/buying.html">Buying</a>
+      <a class="hover:bg-red-500 hover:shadow-lg mb-2 text-xl text-zinc-100 pl-3 rounded" href="/selling.html">Selling</a>
+      <a class="mb-2 text-xl text-white bg-red-600 pl-3 rounded" href="/commercial.html">Commercial</a>
+      <a class="hover:bg-red-500 hover:shadow-lg mb-2 text-xl text-zinc-100 pl-3 rounded" href="/agents.html">Agents</a>
+      <a class="hover:bg-red-500 hover:shadow-lg mb-2 text-xl text-zinc-100 pl-3 rounded" href="/contact.html">Contact</a>
     </div>
     <div>
-      <a class="block text-zinc-300 my-4 mx-6 hover:text-zinc-100" href="tel:780-900-3777"><i class="fa-solid fa-phone pr-4"></i>780-900-3777</a>
-      <a class="block text-zinc-300 mt-4 mb-12 mx-6 hover:text-zinc-100" href="mailto:info@k2r.ca"><i class="fa-solid fa-envelope pr-4"></i>info@k2r.ca</a>
+      <a class="block text-zinc-200 my-4 mx-6 hover:text-white" href="tel:780-900-3777"><i class="fa-solid fa-phone pr-4"></i>780-900-3777</a>
+      <a class="block text-zinc-200 mt-4 mb-12 mx-6 hover:text-white" href="mailto:info@k2r.ca"><i class="fa-solid fa-envelope pr-4"></i>info@k2r.ca</a>
     </div>
-    <div class="text-amber-200 text-center text-3xl">
+    <div class="text-gray-800 text-center text-3xl">
       <!-- <a href=""><i class="p-2 mt-12 hover:text-blue-400 fa-brands fa-twitter"></i></a> -->
-      <a href="https://www.facebook.com/k2realtycorp"><i class="p-2 hover:text-blue-500 fa-brands fa-facebook"></i></a>
+      <a href="https://www.facebook.com/k2realtycorp"><i class="p-2 hover:text-blue-700 fa-brands fa-facebook"></i></a>
+      <a href="https://www.facebook.com/k2realtycorp"><i class="p-2 hover:text-blue-700 fa-brands fa-twitter"></i></a>
     </div>
-    <p class="text-gray-500 text-center pt-16" >Copyright© K2 Realty</p>
+    <p class="text-white text-center pt-16" >Copyright© K2 Realty</p>
   </nav>
   <main class="">
     <section class="lg:pl-52 min-h-screen ">
