--- a/public/404.html
+++ b/public/404.html
@@ -37,7 +37,7 @@
   <nav id="navbar" class="-ml-52 lg:ml-0 overflow-y-auto fixed h-full bg-[#c10c0aff] w-52 transition-all overflow-hidden shadow-[5px_0px_20px_0px_rgba(0,0,0,0.5)]">
     <a href="/"><img class="w-32 m-auto my-8" src="images/k2whiteontransparent.png" alt="K2 Realty logo"></a>
     <div class="flex flex-col p-6">
-      <a class="hover:bg-red-500 hover:shadow-lg mb-2 text-xl text-zinc-100 pl-3 rounded" href="#">Home</a>
+      <a class="hover:bg-red-500 hover:shadow-lg mb-2 text-xl text-zinc-100 pl-3 rounded" href="/">Home</a>
       <a class="hover:bg-red-500 hover:shadow-lg mb-2 text-xl text-zinc-100 pl-3 rounded" href="/buying.html">Buying</a>
       <a class="hover:bg-red-500 hover:shadow-lg mb-2 text-xl text-zinc-100 pl-3 rounded" href="/selling.html">Selling</a>
       <a class="hover:bg-red-500 hover:shadow-lg mb-2 text-xl text-zinc-100 pl-3 rounded" href="/commercial.html">Commercial</a>
