Fixed social image

--- a/public/selling.html
+++ b/public/selling.html
@@ -19,13 +19,13 @@
   <meta name="twitter:site" content="@ethanjmarchand" />
   <meta name="twitter:title" content="K2 Realty" />
   <meta name="twitter:description" content="Free Evaluations. Free Advice." />
-  <meta name="twitter:image" content="images/k2whiteonred2.png" />
+  <meta name="twitter:image" content="images/k2whiteonred3.png" />
   <!-- og tags -->
   <meta property="og:type" content="article" />
   <meta property="og:title" content="K2 Realty" />
   <meta property="og:description" content="Free Evaluations. Free Advice." />
   <meta property="og:url" content="https://k2r.ca/" />
-  <meta property="og:image" content="images/k2whiteonred2.png" />
+  <meta property="og:image" content="images/k2whiteonred3.png" />
   <!-- css -->
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="output.css">
@@ -51,7 +51,7 @@
     <div class="text-gray-800 text-center text-3xl">
       <!-- <a href=""><i class="p-2 mt-12 hover:text-blue-400 fa-brands fa-twitter"></i></a> -->
       <a href="https://www.facebook.com/k2realtycorp"><i class="p-2 hover:text-blue-700 fa-brands fa-facebook"></i></a>
-      <a href="https://www.facebook.com/k2realtycorp"><i class="p-2 hover:text-blue-700 fa-brands fa-twitter"></i></a>
+      <a href="https://twitter.com/EthanJMarchand"><i class="p-2 hover:text-blue-700 fa-brands fa-twitter"></i></a>
     </div>
     <p class="text-white text-center pt-16" >Copyright© K2 Realty</p>
   </nav>
