--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,9 @@
   <meta name="twitter:site" content="@ethanjmarchand" />
   <meta name="twitter:title" content="K2 Realty" />
   <meta name="twitter:description" content="Free Evaluations. Free Advice." />
-  <meta name="twitter:image" content="images/k2whiteonred3.png" />
+  <meta name="twitter:image" content="https://k2r.ca/images/k2whiteonred3.png" />
+  <meta name="twitter:creator" content="@ethanjmarchand" />
+  <meta name="twitter:image:alt" content="K2 Realty Logo" />
   <!-- og tags -->
   <meta property="og:type" content="article" />
   <meta property="og:title" content="K2 Realty" />
