--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+  
   <!-- Twitter tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@ethanjmarchand" />
@@ -33,6 +34,7 @@
   <link rel="stylesheet" href="output.css">
   <script src="https://kit.fontawesome.com/2d2042756f.js" crossorigin="anonymous"></script>
   <title>K2 Realty Corporation</title>
+  <meta name="description" content="Welcome! At K2, we cut through the fluff and get straight to what matters most: results. As a dedicated Commercial and Residential Real Estate firm serving Edmonton and its surrounding areas, we understand that your time and investment are valuable. That's why we've built our reputation on a foundation of honesty, efficiency, and a steadfast commitment to getting things done." />
 </head>
 <body>
   <i id="menubtn" class="cursor-pointer fa-solid fa-bars fixed top-5 right-5 text-3xl lg:invisible text-black"></i>
