--- a/public/ethan.html
+++ b/public/ethan.html
@@ -32,7 +32,6 @@
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="output.css">
   <title>K2 Realty Corporation</title>
-  <meta name="description" content="We specialize in a wide range of services, including buying, selling, leasing, and managing commercial properties. Our personalized approach ensures that we tailor our services to meet each client's unique needs and preferences. We pride ourselves on our attention to detail, exceptional communication skills, and commitment to delivering the best possible results for our clients. Whether you're a business owner looking for the perfect space or an investor searching for the right opportunity, K2 Realty is the perfect partner for all your commercial real estate needs."/>
   <script src="https://kit.fontawesome.com/2d2042756f.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -43,8 +42,8 @@
       <a class="hover:bg-red-500 hover:shadow-lg mb-2 text-xl text-zinc-100 pl-3 rounded" href="/">Home</a>
       <a class="hover:bg-red-500 hover:shadow-lg mb-2 text-xl text-zinc-100 pl-3 rounded" href="/buying.html">Buying</a>
       <a class="hover:bg-red-500 hover:shadow-lg mb-2 text-xl text-zinc-100 pl-3 rounded" href="/selling.html">Selling</a>
-      <a class="mb-2 text-xl text-white bg-red-600 pl-3 rounded" href="#">Commercial</a>
-      <a class="hover:bg-red-500 hover:shadow-lg mb-2 text-xl text-zinc-100 pl-3 rounded" href="/agents.html">Agents</a>
+      <a class="hover:bg-red-500 hover:shadow-lg mb-2 text-xl text-zinc-100 pl-3 rounded" href="/commercial.html">Commercial</a>
+      <a class="mb-2 text-xl text-white bg-red-600 pl-3 rounded" href="#">Agents</a>
       <a class="hover:bg-red-500 hover:shadow-lg mb-2 text-xl text-zinc-100 pl-3 rounded" href="/contact.html">Contact</a>
     </div>
     <div>
@@ -62,19 +61,40 @@
     <section class="lg:pl-52 min-h-screen ">
       <div class="container mx-auto p-6">
         <div class="text-center">
-          <img class="h-[200px] text-center mx-auto" src="images/tower.png" alt="Commercial Building Logo">
-          <h1 class="text-3xl mt-14 py-6 font-bold border-t-4 border-b-4 border-black"> Commercial Division </h1>
-          <p class="leading-7 py-10">I am excited to introduce our new local commercial real estate division at K2 Realty, dedicated to providing top-notch real estate services to clients in our community. Our team of experienced and knowledgeable professionals have a rich understanding of the local market and is committed to helping clients achieve their real estate goals. </p>
-          <p class="leading-7 pb-10">We specialize in a wide range of services, including buying, selling, leasing, and managing commercial properties. Our personalized approach ensures that we tailor our services to meet each client's unique needs and preferences. We pride ourselves on our attention to detail, exceptional communication skills, and commitment to delivering the best possible results for our clients. Whether you're a business owner looking for the perfect space or an investor searching for the right opportunity, K2 Realty is the perfect partner for all your commercial real estate needs.</p>
-          <a class="inline-block cursor-pointer mt-20 border border-black py-4 px-8 text-black rounded text-lg hover:bg-black hover:text-white"" href="/contact.html">Inquire</a>
-          <div class="pt-16 grid lg:grid-cols-3 gap-8">
-            <img class="shadow-[5px_0px_20px_0px_rgba(0,0,0,0.5)]" src="images/comm1.png" alt="">
-            <img class="shadow-[5px_0px_20px_0px_rgba(0,0,0,0.5)]" src="images/comm2.png" alt="">
-            <img class="shadow-[5px_0px_20px_0px_rgba(0,0,0,0.5)]" src="images/comm3.png" alt="">
-          </div class="text-center">
-          
+          <h2 class="text-3xl font-bold pt-12">Our Agents</h2>
+          <p class="text-zinc-500 py-8">A small team, committed to a cause bigger than themselves, can achieve absolutely anything.</p>
+          <p class="border-b-2 pb-12 font-thin">- Simon Sinek</p>
         </div>
-        
+        <div class="grid lg:grid-cols-3 lg:gap-5 mt-16 pb-12 border-b-2">
+          <div class="p-6">
+            <img class="rounded-full h-56 w-56 object-cover mx-auto" src="images/ethan_square.jpg" alt="Ethan Headshot">
+            <div class="">
+              <h3 class="pt-4 text-center text-2xl font-bold">Ethan Marchand</h3>
+              <h4 class="m-4 text-xl"><i class="pr-6 text-lg fas fa-user"></i>Broker/Owner</h4>
+              <a class="m-4 block hover:text-zinc-500 cursor-pointer" href="tel:7808680552"><i class="pr-7 text-lg fas fa-mobile"></i>780-868-0552</a>
+              <a class="m-4 block hover:text-zinc-500 cursor-pointer" href="mailto:ethan@k2r.ca"><i class="pr-6 text-lg fas fa-envelope"></i>ethan@k2r.ca</a>
+            </div>
+          </div>
+          <div class="p-6">
+            <img class="rounded-full h-56 w-56 object-cover mx-auto" src="images/dan.jpg" alt="Ethan Headshot">
+            <div class="">
+              <h3 class="pt-4 text-center text-2xl font-bold">Dan Royer</h3>
+              <h4 class="m-4 text-xl"><i class="pr-6 text-lg fas fa-user"></i>Associate/Owner</h4>
+              <a class="m-4 block hover:text-zinc-500 cursor-pointer" href="tel:7807196684"><i class="pr-7 text-lg fas fa-mobile"></i>780-719-6684</a>
+              <a class="m-4 block hover:text-zinc-500 cursor-pointer" href="mailto:dan@royer.ca"><i class="pr-6 text-lg fas fa-envelope"></i>dan@royer.ca</a>
+            </div>
+          </div>
+            <div class="p-6">
+              <img class="rounded-full h-56 w-56 object-cover mx-auto" src="images/mike.png" alt="Ethan Headshot">
+              <div class="">
+                <h3 class="pt-4 text-center text-2xl font-bold">Michael Vandenhengel</h3>
+                <h4 class="m-4 text-xl"><i class="pr-4 text-lg fas fa-user"></i>Associate</h4>
+                <a class="m-4 block hover:text-zinc-500 cursor-pointer" href="tel:5879997323"><i class="pr-5 text-lg fas fa-mobile"></i>587-999-7323</a>
+                <a class="m-4 block hover:text-zinc-500 cursor-pointer" href="mailto:mdvandenhengel@gmail.com"><i class="pr-4 text-lg fas fa-envelope"></i>mdvandenhengel@gmail.com</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </main>
