--- a/public/404.html
+++ b/public/404.html
@@ -33,6 +33,7 @@
   <link rel="stylesheet" href="output.css">
   <script src="https://kit.fontawesome.com/2d2042756f.js" crossorigin="anonymous"></script>
   <title>K2 Realty Corporation</title>
+  <meta name="description" content="This page could not be found | 404"/>
 </head>
 <body>
   <i id="menubtn" class="cursor-pointer fa-solid fa-bars fixed top-5 right-5 text-3xl lg:invisible text-black"></i>
