--- a/public/buying.html
+++ b/public/buying.html
@@ -32,6 +32,7 @@
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="output.css">
   <title>K2 Realty Corporation</title>
+  <meta name="description" content="Read the basics of home buying!"/>
   <script src="https://kit.fontawesome.com/2d2042756f.js" crossorigin="anonymous"></script>
 </head>
 <body>
