--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
     <div class="text-gray-800 text-center text-3xl">
       <!-- <a href=""><i class="p-2 mt-12 hover:text-blue-400 fa-brands fa-twitter"></i></a> -->
       <a href="https://www.facebook.com/k2realtycorp"><i class="p-2 hover:text-blue-700 fa-brands fa-facebook"></i></a>
-      <a href="https://twitter.com/EthanJMarchand"><i class="p-2 hover:text-blue-700 fa-brands fa-twitter"></i></a>
+      <a href="https://twitter.com/EthanJMarchand"><i class="p-2 hover:text-blue-700 fa-brands fa-x-twitter"></i></a>
     </div>
     <p class="text-white text-center pt-16" >Copyright© K2 Realty</p>
   </nav>
